--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.sit.framework</groupId>
-	<artifactId>com-sit-framework</artifactId>
+	<groupId>msg.sending</groupId>
+	<artifactId>msg-sending</artifactId>
 	<version>1.8.0</version>
 	<packaging>war</packaging>
 	<name>Activiti demo</name>
