complete the code-generater/fix the database properties file

--- a/src/main/resources/resources/freemarker/sit_database.properties
+++ b/src/main/resources/resources/freemarker/sit_database.properties
@@ -1,28 +1,5 @@
-#mysql 
-#diver_name=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://localhost:3306/jxcia?useUnicode=true&amp;characterEncoding=UTF-8
-#username=root
-#password=123
-#database_name=jxcia
-#url=jdbc:mysql://localhost:3306/jxcia?useUnicode=true&amp;characterEncoding=UTF-8
-#oracle
-#diver_name=oracle.jdbc.driver.OracleDriver
-#url=jdbc:oracle:thin:@192.168.40.132:1521/kdp
-#database_name=kdp
-#username=CIP
-#password=CIP
-
-
 diver_name=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@192.168.40.147:1521/kdp
 database_name=kdp
-username=w24sDev
-password=w24sDev
-
-#postgre
-#diver_name=org.postgresql.Driver
-#url=jdbc:postgresql://localhost:5432/jeecg
-#username=postgres
-#password=postgres
-#database_name=jeecg
-
+username=MSP
+password=MSP
