--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,21 @@
 			<version>3.3.1</version>
 		</dependency><!--SPRINGend --><!--PERSISTENCEbegin --><!--hibernate -->
 		<dependency>
+            <groupId>axis</groupId>
+            <artifactId>axis</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+	      <groupId>org.apache.axis</groupId>
+	      <artifactId>axis-jaxrpc</artifactId>
+	      <version>1.4</version>
+	    </dependency>
+        <dependency>
+	      <groupId>commons-discovery</groupId>
+	      <artifactId>commons-discovery</artifactId>
+	      <version>0.4</version>
+	    </dependency>
+		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>3.0</version>
@@ -744,7 +759,6 @@
 			<artifactId>quartz</artifactId>
 			<version>1.5.2</version>
 		</dependency>
-    
 	</dependencies>
 <pluginRepositories>  
         <pluginRepository>  
